[gd_scene load_steps=3 format=3 uid="uid://bv0r1cav1r3x4"]

[ext_resource type="Script" path="res://scripts/characters/char_attack.gd" id="1_s4pv2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_frmcu"]
resource_local_to_scene = true
radius = 30.0

[node name="AttackArea2D" type="Area2D" node_paths=PackedStringArray("atkShape")]
collision_layer = 2
script = ExtResource("1_s4pv2")
atkShape = NodePath("AttackShape")

[node name="AttackShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_frmcu")
debug_color = Color(0.94902, 0, 0.470588, 0.419608)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="." to="." method="_on_character_attack_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
